# rust-cargo-plugin

./: Cargo.toml  Justfile  README.md
.cargo/: config.toml
.changeset/: config.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs
