[package]
name = "rust-cargo-plugin"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "plugin"

[dependencies]
extism-pdk = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
extism-convert = "1.8.0"
toml = "0.8.19"
toml_edit = "0.22.22"

[dev-dependencies]
tempfile = "3.13.0"
similar = "2.6.0"
similar-asserts = "1.4.2"
rstest = "0.23.0"
