[package]
name = "rust-cargo-plugin"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "plugin"

[dependencies]
extism-pdk = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
extism-convert = "1.10.0"
toml = "0.8.20"
toml_edit = "0.22.24"

[dev-dependencies]
tempfile = "3.18.0"
similar = "2.6.0"
similar-asserts = "1.7.0"
rstest = "0.25.0"
